# RISCulator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
src/: Makefile  bin.txt  main.rs  utils.rs
src/assets/: logo.txt
src/scripts/: docker_disasm.sh
src/test/: main.c
