[package]
name = "RISCulator"
version = "0.1.0"
edition = "2021"
authors = ["Suhas Kudlur Viswanath <suhaskv0111@gmail.com>"]
license = "MIT"
description = "RISCulator is a RISC-V emulator. "
readme = "README.md"
homepage = "https://github.com/skudlur/RISCulator"
repository = "https://github.com/skudlur/RISCulator"
keywords = ["cli", "riscv", "emulator"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
env_logger = "0.10.0"
chrono = "0.4.26"
colored = "2.0.0"
